fix flicker test-4

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,8 @@
 html, body {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;     /* Firefox */
+    scrollbar-gutter: stable;
+    overscroll-behavior: none;
 }
 
 html::-webkit-scrollbar, 
